[gd_scene load_steps=5 format=2]

[ext_resource path="res://menus/character_select/CharacterPicker.tscn" type="PackedScene" id=1]
[ext_resource path="res://Art/GUI/Signs/CharacterSelect/CharacterBox1.png" type="Texture" id=2]
[ext_resource path="res://menus/character_select/CharacterPickerSign.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 42, 73 )

[node name="CharacterPicker" type="RigidBody2D"]
use_parent_material = true
collision_layer = 64
collision_mask = 64
script = ExtResource( 3 )
box_id = 1

[node name="Sprite" type="Sprite" parent="."]
use_parent_material = true
z_index = 2
texture = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="Sprite"]
use_parent_material = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -45.5
margin_top = -76.5
margin_right = -45.5
margin_bottom = -76.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterPicker" parent="Sprite/MarginContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 91.0
margin_bottom = 153.0
rect_scale = Vector2( 1, 1 )
alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="pick_character" from="Sprite/MarginContainer/CharacterPicker" to="." method="_on_CharacterPicker_pick_character"]
[connection signal="start" from="Sprite/MarginContainer/CharacterPicker" to="." method="_on_CharacterPicker_start"]
[connection signal="unpick_character" from="Sprite/MarginContainer/CharacterPicker" to="." method="_on_CharacterPicker_unpick_character"]
